[package]
name = "cargo-disassemble"
description = "Disassemble your rust project"
authors = ["Adam Niederer <adam.niederer@gmail.com>"]
license = "AGPL-3.0"
version = "0.1.1"

keywords = ["disassembly", "cargo"]
categories = ["command-line-utilities", "command-line-interface", "development-tools", "development-tools::cargo-plugins", "text-processing"]
repository = "https://github.com/AdamNiederer/cargo-disassemble"
readme = "README.org"

[dependencies]
rustc-demangle = "0.1.0"
structopt = "0.1.7"
structopt-derive = "0.1.6"
glob = "0.2.11"
cargo = "0.25.0"
toml = "0.4.5"
regex = "0.2.10"